...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            android:elevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:id="@+id/itemCover"
                android:layout_width="100dp"
...
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/itemCover"
                app:layout_constraintTop_toBottomOf="@+id/bookTitle" />

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
...
